{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 146,
  "lineage": "97fa9d01-c762-aa08-cd58-0564127855db",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-03T22:26:26.033-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/xdr-mp-testing/global/firewalls/consumer-allow-external",
            "log_config": [],
            "name": "consumer-allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/global/networks/consumer-vpc",
            "params": [],
            "priority": 1000,
            "project": "xdr-mp-testing",
            "self_link": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/global/firewalls/consumer-allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "local",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-11-03T22:26:26.490-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/xdr-mp-testing/global/firewalls/consumer-allow-local",
            "log_config": [],
            "name": "consumer-allow-local",
            "network": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/global/networks/consumer-vpc",
            "params": [],
            "priority": 1000,
            "project": "xdr-mp-testing",
            "self_link": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/global/firewalls/consumer-allow-local",
            "source_ranges": [
              "10.1.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251023",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/zones/us-west1-a/disks/client-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-03T22:45:03.208-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true",
              "panw": "true"
            },
            "enable_display": false,
            "id": "projects/xdr-mp-testing/zones/us-west1-a/instances/client-vm",
            "instance_id": "2295637096257560065",
            "label_fingerprint": "3l8karYHuuE=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true"
            },
            "metadata_fingerprint": "OuqoYRt_sko=",
            "metadata_startup_script": "#!/bin/bash\napt-get update \napt-get install apache2-utils mtr iperf3 tcpdump -y\nset -euo pipefail\n\nSECRET_NAME=\"ngfw-ca\"   # \u003c-- replace with your Secret Manager secret name\nCERT_FILE=\"ngfw-ca.crt\"\nTMP_CERT=\"/tmp/${CERT_FILE}\"\n\necho \"[INFO] Fetching CA cert from Secret Manager...\"\n# Requires VM service account to have role: roles/secretmanager.secretAccessor\ngcloud secrets versions access latest --secret=\"${SECRET_NAME}\" \u003e \" [...]
            "name": "client-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/global/networks/consumer-vpc",
                "network_ip": "10.1.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/regions/us-west1/subnetworks/us-west1-consumer",
                "subnetwork_project": "xdr-mp-testing"
              }
            ],
            "project": "xdr-mp-testing",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/zones/us-west1-a/instances/client-vm",
            "service_account": [
              {
                "email": "306534556904-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "client-vm"
            ],
            "tags_fingerprint": "trmrrf_gYQI=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true",
              "panw": "true"
            },
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_zones.available",
            "data.google_project.current",
            "google_compute_network.main",
            "google_compute_router.main",
            "google_compute_router_nat.main",
            "google_compute_subnetwork.main",
            "google_secret_manager_secret.ngfw_ca",
            "google_secret_manager_secret_iam_member.default_gce_access",
            "google_secret_manager_secret_version.ngfw_ca_version"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251023",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/zones/us-west1-a/disks/web-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-03T22:45:14.000-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true",
              "panw": "true"
            },
            "enable_display": false,
            "id": "projects/xdr-mp-testing/zones/us-west1-a/instances/web-vm",
            "instance_id": "6581236462994595350",
            "label_fingerprint": "3l8karYHuuE=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true"
            },
            "metadata_fingerprint": "cl6wq7Zgfpg=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt-get update\nsudo apt-get install coreutils -y\nsudo apt-get install php -y\nsudo apt-get install apache2 tcpdump iperf3 -y \nsudo a2ensite default-ssl \nsudo a2enmod ssl \n# Apache configuration:\nsudo rm -f /var/www/html/index.html\nsudo wget -O /var/www/html/index.php https://raw.githubusercontent.com/wwce/terraform/master/azure/transit_2fw_2spoke_common/scripts/showheaders.php \nsystemctl restart apache2\nset -euo pipefail\n\nSECRE [...]
            "name": "web-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/global/networks/consumer-vpc",
                "network_ip": "10.1.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/regions/us-west1/subnetworks/us-west1-consumer",
                "subnetwork_project": "xdr-mp-testing"
              }
            ],
            "project": "xdr-mp-testing",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/zones/us-west1-a/instances/web-vm",
            "service_account": [
              {
                "email": "306534556904-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true",
              "panw": "true"
            },
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_zones.available",
            "google_compute_network.main",
            "google_compute_router.main",
            "google_compute_router_nat.main",
            "google_compute_subnetwork.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/xdr-mp-testing/global/networks/consumer-vpc",
            "mtu": 0,
            "name": "consumer-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7020730265846948458",
            "numeric_id": "7020730265846948458",
            "project": "xdr-mp-testing",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/global/networks/consumer-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-03T22:26:27.009-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/xdr-mp-testing/regions/us-west1/routers/us-west1-consumer-router",
            "name": "us-west1-consumer-router",
            "network": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/global/networks/consumer-vpc",
            "project": "xdr-mp-testing",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/regions/us-west1/routers/us-west1-consumer-router"
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "xdr-mp-testing/us-west1/us-west1-consumer-router/us-west1-consumer-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "us-west1-consumer-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "xdr-mp-testing",
            "region": "us-west1",
            "router": "us-west1-consumer-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.main",
            "google_compute_router.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-03T22:26:26.359-08:00",
            "enable_flow_logs": false,
            "gateway_address": "10.1.0.1",
            "id": "projects/xdr-mp-testing/regions/us-west1/subnetworks/us-west1-consumer",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "us-west1-consumer",
            "network": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/global/networks/consumer-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "xdr-mp-testing",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "us-west1-cluster"
              },
              {
                "ip_cidr_range": "10.30.0.0/16",
                "range_name": "us-west1-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/xdr-mp-testing/regions/us-west1/subnetworks/us-west1-consumer",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1025294338284069501
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_inkubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_pods",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_deny_exkubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tpu_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}